[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Player/Projectile.png" type="Texture" id=2]
[ext_resource path="res://Sounds/1.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 2 )

[sub_resource type="Animation" id=2]
resource_name = "Active"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 3 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 3 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.994412, 0.324 ), 0.654395, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 4, 3, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 32, 0 )
angular_velocity = 1.05
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 0.41
scale_curve = SubResource( 5 )
hue_variation = -0.9
hue_variation_random = 0.21

[node name="Projectile" type="KinematicBody2D"]
collision_layer = 12
collision_mask = 12
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Active = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 31
collision_mask = 31

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Particles2D" type="Particles2D" parent="."]
amount = 50
local_coords = false
process_material = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
autoplay = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
